# AI_Decomposed

./: .gitignore  0_AI_Decomposed_Overview.ipynb  1_Image_Metadata.ipynb  2_Py_Convolution.ipynb  3_CPP_Convolution.ipynb  3_Py_Pooling.ipynb  4_Compare_Performance_Python_VS_C++.ipynb  4_Python_Neural_Net.ipynb  4_V_Visual_Comparison_Python_VS_C++.ipynb  5_Calling_GPU_CUDA_code_from_Python.ipynb  5_GPU_from_Python.ipynb  6_GPU_v_C++_Python.ipynb  6_GPU_vs_C++_vs_Python_performance.ipynb  7_Compare_Performance_GPU_CPP_Python.ipynb  7_Visualized_Python_v_CPP_v_GPU.ipynb  8_Max_Out_GPU.ipynb  9_GPU_Tensforflow.ipynb  9_TensorFlow_CNN.ipynb  AI_Decomposed.ipynb  AI_Decomposed.py  AI_Decomposed_Overview.ipynb  AI_From_Dirt.ipynb  CMakeLists.txt  Py_Convolution.ipynb  README.md  Shallow_Learning.ipynb  Stacked_Charts_Bokeh.ipynb  cuda.cpp  cuda.cu  dirt.cpp  scratch_pad.ipynb
.ipynb_checkpoints/: AI_From_Dirt-checkpoint.ipynb
CPP_CNN/: 4_V_Visual_Comparison_Python_VS_C++.ipynb
CPP_CNN/cpp/: adsf  convolution.cpp
CPP_CNN/results/: py_v_cpp.2.csv  py_v_cpp.3.csv  py_v_cpp.csv
GPU_from_Python/: 5_Calling_GPU_CUDA_code_from_Python.ipynb  6_GPU_v_C++_Python.ipynb  9_GPU_Tensforflow.ipynb
GPU_from_Python/gpu/: gpu.cu  gpu_hello.cpp  gpu_hello.cu
GPU_from_Python/results/: py_v_cpp_v_gpu.2.csv  py_v_cpp_v_gpu.csv
Python/: 0_Image_Metadata.ipynb  1_Image_Metadata.ipynb  1_Py_Convolution.ipynb  2_Py_Pooling.ipynb  3_Py_Pooling.ipynb  3_Python_Neural_Net.ipynb  AI_Decomposed.py
cnn_web/: cnn.py
cnn_web/web/: convolutional-layer-stateful.js  convolutional-layer.js  example.js  index.jsp  pooling-layer-nope.js  pooling-layer.js
cpp/: CMakeLists.txt  convolution.cpp  dirt.cpp
cpp_gpu/: CMakeLists.txt
gpu/: CMakeLists.txt  cuda.cu  gpu_hello.cu  simple_pooling.cu
results/: gpu.csv  py_v_cpp.3.csv  py_v_cpp_v_gpu.ALL.csv
